syntax = "proto3";
package delivery;

message DeleteEntryRequest {
	string type = 1;
	string id = 2;
}

message DeleteEntryResponse {}
